--- a/styles/styles.css
+++ b/styles/styles.css
@@ -329,6 +329,7 @@ body {
   min-height: 72px;
   margin: 0 auto;
   margin-bottom: 25px;
+  text-indent: 0;
 }
 
 .hero-advantages p {
@@ -337,6 +338,7 @@ body {
   line-height: 26px;
   text-align: center;
   margin-top: 0;
+  width: 655px;
 }
 
 .advantages-list {
@@ -365,7 +367,7 @@ body {
 }
 
 .advantages-item-text {
-  padding: 102px 85px;
+  padding: 102px 84px;
 }
 
 .advantages-item-img {
