--- a/styles/styles.css
+++ b/styles/styles.css
@@ -866,6 +866,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(242, 242, 242, 0.8);
+
 }
 
 .modal {
@@ -1117,8 +1118,8 @@ body {
 
 .modal-button {
   border: none;
-  width: 23px;
-  height: 23px;
+  width: 20px;
+  height: 20px;
   border-radius: 4px;
   color: rgba(117, 97, 87, 0.3);
   background-color: transparent;
@@ -1150,6 +1151,14 @@ body {
   opacity: 0, 2;
 }
 
+.modal-button svg{
+  position: absolute;
+}
+
+.minus{
+
+}
+
 .modal-input-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1158,7 +1167,7 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  width: 111px;
+  width: 110px;
   min-height: 48px;
   border-radius: 4px;
 }
@@ -1195,7 +1204,7 @@ body {
 }
 
 .quantity-group {
-  width: 248px;
+  width: 242px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1214,8 +1223,8 @@ body {
   margin: 0;
   margin-right: 46px;
   border: 0;
-  width: 26px;
-  height: 26px;
+  width: 25px;
+  height: 25px;
 }
 
 .tooltip {
