--- a/10/styles/styles.css
+++ b/10/styles/styles.css
@@ -866,7 +866,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(242, 242, 242, 0.8);
-  display: none;
+
 }
 
 .modal {
@@ -894,8 +894,8 @@ body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   position: absolute;
-  top: 66px;
-  left: 579px;
+  top: 63px;
+  left: 612px;
   cursor: pointer;
 }
 
@@ -980,6 +980,8 @@ body {
   font-weight: 700;
   line-height: 24px;
   text-align: left;
+  margin-top: 12px;
+  margin-bottom: 12px;
 }
 
 .data-icon {
@@ -999,9 +1001,9 @@ body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   display: block;
-  margin-bottom: 4px;
+  margin-bottom: 2px;
   text-align: start;
-  padding-left: 20px;
+  padding-left: 18px;
 }
 
 .modal-form-text::-webkit-input-placeholder {
@@ -1118,8 +1120,8 @@ body {
 
 .modal-button {
   border: none;
-  width: 23px;
-  height: 23px;
+  width: 20px;
+  height: 20px;
   border-radius: 4px;
   color: rgba(117, 97, 87, 0.3);
   background-color: transparent;
@@ -1151,6 +1153,12 @@ body {
   opacity: 0, 2;
 }
 
+.modal-button svg {
+  position: absolute;
+}
+
+.minus {}
+
 .modal-input-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1159,7 +1167,7 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  width: 111px;
+  width: 110px;
   min-height: 48px;
   border-radius: 4px;
 }
@@ -1179,8 +1187,7 @@ body {
   justify-content: space-between;
   -webkit-box-align: baseline;
   -ms-flex-align: baseline;
-  align-items: baseline;
-  margin-bottom: 23px;
+  margin-bottom: 24px;
 }
 
 .data-information {
@@ -1196,7 +1203,7 @@ body {
 }
 
 .quantity-group {
-  width: 248px;
+  width: 247px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1215,13 +1222,13 @@ body {
   margin: 0;
   margin-right: 46px;
   border: 0;
-  width: 26px;
-  height: 26px;
+  width: 25px;
+  height: 25px;
 }
 
 .tooltip {
   position: absolute;
-  margin-left: 10px;
+  margin-left: 11px;
 }
 
 .tooltip-icon {
@@ -1240,15 +1247,18 @@ body {
   min-height: 143px;
   background-color: #333333;
   color: #ffffff;
-  padding: 18px;
+  padding-top: 19px;
+  padding-left: 22px;
+  padding-right: 18px;
+  padding-bottom: 18px;
   border-radius: 10px;
   position: absolute;
-  top: 35px;
+  top: 41px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   display: none;
   z-index: 1;
-  left: -173%;
+  left: -116px;
 }
 
 .tooltip-text::after {
@@ -1258,15 +1268,10 @@ body {
   background-image: url("../images/vector.svg");
   position: absolute;
   bottom: 100%;
-  left: 54%;
-  -webkit-transform: translateX(-54%);
-  -ms-transform: translateX(-54%);
-  transform: translateX(-54%);
-}
-
-.form-label-icon {
-  position: relative;
-  padding-right: 16px;
+  left: 51%;
+  -webkit-transform: translateX(-51%);
+  -ms-transform: translateX(-51%);
+  transform: translateX(-51%);
 }
 
 .tooltip-toggle:hover + .tooltip-text {
@@ -1280,6 +1285,13 @@ body {
 .form-label {
   position: relative;
   padding-right: 16px;
+  width: 49px;
+}
+
+.form-label-icon {
+  position: relative;
+  padding-right: 16px;
+  margin-left: 4px;
 }
 
 .filter-background {
