--- a/styles/styles.css
+++ b/styles/styles.css
@@ -608,7 +608,7 @@ body {
 .subscription {
   background-image: url("../images/subscribe-1.jpg");
   background-repeat: no-repeat;
-  background-size: 100% auto;
+  background-size: cover;
   text-align: center;
   color: #ffffff;
   margin: 0;
