--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,6 +98,7 @@ body {
   align-items: center;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  padding-left: 169px;
 }
 
 .site-navigation-item {
@@ -146,7 +147,7 @@ body {
 
 .active-link::before {
   content: "";
-  height: 2px;
+  height: 3px;
   background-color: #756257;
   width: 100%;
   position: absolute;
@@ -199,7 +200,7 @@ body {
 
 .logo {
   width: 140px;
-  height: 64px;
+  height: 70px;
   margin-right: 28px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -207,6 +208,7 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+position: absolute;
 }
 
 .menu-button {
@@ -1967,6 +1969,7 @@ body {
   -ms-grid-columns: 140px 20px 140px;
   grid-template-columns: 140px 140px;
   gap: 16px 20px;
+  overflow: hidden;
 }
 
 .product-card-link {
