--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1430,9 +1430,17 @@ body {
 .control-input:focus + .control-mark-circle {
   border: 3px solid #83b3d3;
 }
+.control-input:disabled + .control-mark-circle {
+  opacity: 0.1;
+}
+
 
 .control-input:focus + .control-mark-square {
   border: 3px solid #83b3f3;
+}
+
+.control-input:disabled + .control-mark-square {
+ opacity: 0.1;
 }
 
 .control-mark-square {
