--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1688,8 +1688,8 @@ body {
 }
 
 .button-submit:disabled {
-  opacity: 10%;
-  background-color: rgba(255, 255, 255, 0);
+  color: #ffffff;
+  background-color: #e5e5e5;
 }
 
 .button-reset {
