--- a/styles/styles.css
+++ b/styles/styles.css
@@ -971,7 +971,7 @@ body {
 }
 
 .modal-container-button:disabled {
-  opacity: 0.1;
+  background-color: #e5e5e5;
 }
 
 .number-of-visitors {
@@ -1753,6 +1753,7 @@ body {
   background-image: url("../images/arrow-down.svg");
   background-repeat: no-repeat;
   background-position: right 20px center;
+
 }
 
 .select-control {
@@ -1775,7 +1776,7 @@ body {
 
 .select-control:not(:placeholder-shown) {
   outline: none;
-  border: 2px solid #3f5e72;
+  border: 2px solid #e5e5e5;
   background-color: #fff;
 }
 
