--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1763,25 +1763,13 @@ body {
   border-color: #68a2ca;
 }
 
-.select-control:not(:-moz-placeholder-shown) {
-  outline: none;
-  border: 2px solid #3f5e72;
-}
-
-.select-control:not(:-ms-input-placeholder) {
-  outline: none;
-  border: 2px solid #3f5e72;
-}
-
-.select-control:not(:placeholder-shown) {
-  outline: none;
-  border: 2px solid #e5e5e5;
-  background-color: #fff;
-}
-
 .select-control:focus {
   outline: none;
   border-color: #68a2ca;
+}
+
+.select-control:focus:not(:placeholder-shown) {
+  border: 2px solid #3f5e72;
 }
 
 .select-control:disabled {
