--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1574,11 +1574,12 @@ body {
 
 .range-input:focus {
   outline: none;
-  border: 3px solid #83b3d3;
+  outline: 3px solid #83b3d3;
+  outline-offset: -1px;
 }
 
 .range-input:hover {
-  border: 3px solid #000000;
+  outline: 2px solid #000000;
 }
 
 .range-input::-webkit-input-placeholder {
@@ -1603,17 +1604,17 @@ body {
 
 .range-input:not(:-moz-placeholder-shown) {
   outline: none;
-  border: 2px solid #000000;
+  outline: 2px solid #000000;
 }
 
 .range-input:not(:-ms-input-placeholder) {
   outline: none;
-  border: 2px solid #000000;
+  outline: 2px solid #000000;
 }
 
 .range-input:not(:placeholder-shown) {
   outline: none;
-  border: 2px solid #000000;
+  outline: 2px solid #000000;
 }
 
 .range-input::-webkit-outer-spin-button,
